# hopsparser

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  DepTree.py  LICENCE.md  README.md  bpe_lexer.py  covington.py  deptree.py  graph_parser.py  mlc_config.json  models.md  mst.py  pyproject.toml  requirements.txt  setup.cfg  tox.ini  tox.toml
.github/: ci.yml
.github/workflows/: ci.yml
data/: models.json
docs/: _config.yml  _toc.yml  get_started.md  index.md  models.md  server.md
examples/: camembert.yaml  flaubert.yaml  mdeberta-polyglot.yaml  mdeberta.yaml  nobert.yaml  train_config-fr.yaml  train_config-ud.yaml  xlm-r-base.yaml
examples/configs/: BERTrade-FlauBERT.yaml  BERTrade-camemBERT.yaml  bertrade_base.yaml  camembert.yaml  flaubert.yaml  mdeberta-polyglot.yaml  modernbert-base.yaml  modernbert-large.yaml  nobert-en.yaml  nobert-fr.yaml  nobert.yaml  roberta-base.yaml  xlm-r-base.yaml
frwiki_embed1024_layers12_heads16/: README
hopsparser/: conll2018_eval.py  deptree.py  evaluator.py  lexers.py  main.py  mst.py  parser.py  server.py  spacy_component.py  trainer.py  utils.py
hopsparser/traintools/: trainer.py
npdependency/: bpe_lexer.py  conll2018_eval.py  covington.py  deptree.py  graph_parser.py  graph_parser3.py  lexers.py  main.py  make_summary.py  mst.py  params_bert.yaml  params_user.yaml  parser.py  server.py  utils.py
profiteroles/: PropagTable.py  constree.py  dependency.py  mcvf_heads.py
scripts/: README.md  check_models.py  get_UD_data.py  get_UD_data.xsh  prepare_upload.xsh  test_models.py  train_models.py  train_multi_ud.py  train_ud_polyglot.py  trainer.py  zenodo_upload.py
spmrl/: README
src/: bpe_lexer.py  deptree.py  graph_parser.py  graph_parser2.py  graph_parser3.py  lexers.py  make_summary.py  mst.py  params.yaml  params_bert.yaml  params_user.yaml
tests/: conftest.py  test-requirements.txt  test_deptree.py  test_eval.py  test_evaluator.py  test_lexers.py  test_mst.py  test_parser.py  test_server.py  test_smoke.py
tests/common/: __init__.py
tests/fixtures/: README.md  a_long_sentence.txt  raw.txt  toy_bert_fasttok.yaml  toy_everylexer.yaml  toy_fast_flaubert.yaml  toy_fasttext_remote.yaml  toy_flaubert.yaml  toy_nobert.yaml  toy_onlychars.yaml  toy_onlyfasttext.yaml  toy_onlywords.yaml  toy_onlywords_adaptative.yaml  toy_onlywords_spaceafter.yaml  truncated-sv_talbanken-ud-dev-partial.conllu  truncated-sv_talbanken-ud-partial.conllu  truncated-sv_talbanken-ud.conllu
tests/fixtures/train_script/: train_config.yaml
tests/fixtures/train_script/configs/: toy_onlywords.yaml
tests/fixtures/train_script/treebanks/toy_treebank/: toy_dev.conllu
