[metadata]
name = npdependency
version = 0.1.0
description = A graph parser to tinker with
license = MIT
author = Benoît Crabbé
author_email = benoit.crabbe@linguist.univ-paris-diderot.fr
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    nlp
    parsing

[options]
packages = find:
include_package_data=True
python_requires = >= 3.7
install_requires =
    click
    click_pathlib
    fastapi
    fasttext
    pyyaml
    torch == 1.7.1
    transformers >= 4.0.0, < 5.0.0
    typing_extensions
    uvicorn

[options.entry_points]
console_scripts =
    hopsparser = npdependency.main:cli
    graph_parser = npdependency.graph_parser:main
    make_parser_csv_summary = npdependency.make_summary:make_csv_summary
    eval_parse = npdependency.conll2018_eval:main

[flake8]
max-line-length = 100
ignore = E203,E266,E501,W503
max-complexity = 18

[mypy]
warn_unreachable = True
