[metadata]
name = hopsparser
version = 0.3.3
description = A graph dependency parser to tinker with
license = MIT
author = Benoît Crabbé
author_email = benoit.crabbe@linguist.univ-paris-diderot.fr
url = https://github.com/bencrabbe/npdependency
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    nlp
    parsing

[options]
packages = find:
include_package_data=True
python_requires = >= 3.7
install_requires =
    boltons
    click
    click_pathlib
    fastapi
    fasttext ~= 0.9
    protobuf
    pyyaml
    sentencepiece
    torch ~= 1.8.0
    transformers >= 4.0.0, <= 4.7.0
    typing_extensions
    uvicorn

[options.extras_require]
traintools = pandas

[options.entry_points]
console_scripts =
    hopsparser = npdependency.main:cli
    graph_parser = npdependency.graph_parser:main
    make_parser_csv_summary = npdependency.make_summary:make_csv_summary
    eval_parse = npdependency.conll2018_eval:main

[flake8]
max-line-length = 100
ignore = E203,E266,E501,W503
max-complexity = 18

[mypy]
warn_unreachable = True
