[metadata]
name = hopsparser
version = 0.4.1
description = A graph dependency parser to tinker with
license = MIT
author = "Benoît Crabbé, Loïc Grobol"
author_email = "benoit.crabbe@univ-paris-diderot.fr, lgrobol@parisnanterre.fr"
url = https://github.com/hopsparser/hopsparser
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    nlp
    parsing

[options]
packages = find:
include_package_data=True
python_requires = >= 3.8
install_requires =
    bidict
    boltons
    click >= 8.0.4, < 9.0.0
    fastapi
    fasttext ~= 0.9
    loguru
    protobuf
    pydantic
    pyyaml
    rich
    sentencepiece
    torch >= 1.9.0, < 1.12.0, != 1.10.0
    transformers >= 4.12.2, < 5.0.0
    uvicorn

[options.extras_require]
traintools =
    httpx[http2]
    pandas
tests =
    hypothesis
    pytest
    pytest-assert-utils
    pytest-console-scripts
    pytest-lazy-fixture

[options.entry_points]
console_scripts =
    hopsparser = hopsparser.main:cli
    eval_parse = hopsparser.conll2018_eval:main

[flake8]
max-line-length = 100
ignore = E203,E266,E501,W503
max-complexity = 18

[mypy]
warn_unreachable = True
